--- a/style.css
+++ b/style.css
@@ -354,18 +354,44 @@ img {
 }
 
 .work__img {
-    box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.792);
-    border-radius: .5rem;
-    overflow: hidden;
+box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.792);
+border-radius: .5rem;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 300px; /* Adjust the width as per your requirement */
+height: 200px;
+overflow: hidden;
+position: relative;
 }
 
 .work__img img {
-    transition: 1s;
+width: 100%;
+height: 100%;
+object-fit: cover;
+transition: 1s;
 }
 
-.work__img img:hover {
-    transform: scale(1.1);
+.work__img:hover img {
+transform: scale(1.1);
 }
+
+.work__text {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+background-color: rgba(0, 0, 0, 0.7);
+color: #fff;
+padding: 10px;
+opacity: 0;
+transition: opacity 0.3s ease;
+}
+
+.work__img:hover .work__text {
+opacity: 1;
+}
+
 
 /* ===== CONTACT =====*/
 .contact__input {
