--- a/style.css
+++ b/style.css
@@ -365,11 +365,32 @@ overflow: hidden;
 position: relative;
 }
 
+.work__img1 {
+box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.792);
+border-radius: .5rem;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 300px;
+height: 200px;
+overflow: hidden;
+position: relative;
+}
+
 .work__img img {
 width: 100%;
 height: 100%;
 object-fit: cover;
 transition: 1s;
+}
+
+.work__img1 img {
+  
+transition: 1s;
+}
+
+.work__img1:hover img {
+transform: scale(1.1);
 }
 
 .work__img:hover img {
@@ -392,6 +413,9 @@ transition: opacity 0.3s ease;
 opacity: 1;
 }
 
+.work__img1:hover .work__text {
+opacity: 1;
+}
 
 /* ===== CONTACT =====*/
 .contact__input {
